tdf#146168 tdf#150613 list attributes: limit hack to RTF

This fixes an ODT regression from LO 7.2's
commit 0a32371cc2f93fad7954e0fe9c48976aae6c5b9f.

The hack applies the last character formatting in the paragraph
to the numbering characters. This was a hack that existed for
DOC and DOCX and RTF in various troublesome modes for quite a while.
However, recently since 6.4ish era there have been some
improvements for DOC and DOCX, so these have been excluded and
now only RTF remains.

Most of the time an RTF file also looks like a DOC
(from a compat settings point of view),
so even RTF files usually don't have this clause apply.
In fact, I looked for the RTF files that this hack still applies to,
but couldn't find a single example. Really? Did something change?

I also looked for examples of files I will be excluding (!isOnlyRTF)
and only found tdf135973.odt and tdf146955.odt. Neither one has
character formatting on their numbered lists, so they can't
be used effectively for a unit test.

It is somewhat pointless to make a test. I don't even think we
can round-trip an RTF that has these characteristics.
Likely the best thing is to just drop the hack altogether,
especially since it would pass the unit tests now.
(I'm sure it was failing before.)

If we can't round-trip it, is there any point in having this
non-import hack in place?

Change-Id: I2f95c10e1d0a9dc53b01027e9c97e5ded29c6750
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147939
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 27df5ef405826875340645b9b979bd5c2c0b92cc)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147978